<resources>
    <string name="app_name">Ktrack</string>
    <string name="action_settings">Settings</string>
    <string name="add_contact">Add contact</string>
    <string name="edit_contacts">Edit contacts</string>
    <string name="edit_contact">Edit contact</string>
    <string name="main_menu">Main</string>
    <string name="START">START</string>
    <string name="STOP">STOP</string>
    <string name="ADD">ADD</string>
    <string name="apply_delete_contact">DELETE</string>
    <string name="intervalNotChosen">Interval</string>
    <string name="intervalSelected">You are updating your position every %1$s minutes.</string>
    <string name="phoneNumberSelected">Tracking is sent to %1$s.</string>
    <string name="notTracking">Tracking will be sent to %1$s.</string>
    <string name="baseURL">https://www.google.com/maps/search/?api=1&amp;query=</string>
    <string name="mapButton">MAP</string>
    <string name="contactPhone">Phone Number</string>
    <string name="contactName">Name</string>
    <string name="primary_contact">Primary contact?</string>
    <string name="noPrimaryContact">Add primary contact to start tracking</string>
    <string name="apply_edit_contacts">APPLY</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="interval1min">1 min</string>
    <string name="interval10min">10 min</string>
    <string name="interval30min">30 min</string>
    <string name="interval1hour">1 hour</string>
    <string name="interval24hour">1 day</string>
    <string-array name="intervals_array">
        <item>1</item>
        <item>10</item>
        <item>20</item>
        <item>30</item>
        <item>40</item>
        <item>50</item>
        <item>60</item>
    </string-array>
</resources>
